# geometry

./: CMakeLists.txt  Object.cpp  Object.h  Parser.cpp  Parser.h  README.md  main.cpp
nbproject/: configurations.xml  project.xml
